# igreja

./: .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  membros.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/: 20250101000000_initial.sql  20250219000000_password_reset_tokens.sql  20250219100000_ebd_evolution.sql  20250220000000_member_improvements.sql  20260220100000_congregations.sql  20260221000000_user_member_integration.sql
backend/src/: errors.rs  main.rs
backend/src/api/: middleware.rs  response.rs
backend/src/api/handlers/: asset_handler.rs  auth_handler.rs  church_handler.rs  church_role_handler.rs  congregation_handler.rs  ebd_handler.rs  family_handler.rs  financial_handler.rs  health_handler.rs  member_handler.rs  member_history_handler.rs  ministry_handler.rs  mod.rs  upload_handler.rs  user_handler.rs
backend/src/application/dto/: asset_dto.rs  auth_dto.rs  church_dto.rs  church_role_dto.rs  congregation_dto.rs  ebd_dto.rs  family_dto.rs  financial_dto.rs  member_dto.rs  member_history_dto.rs  ministry_dto.rs  mod.rs  user_dto.rs
backend/src/application/services/: account_plan_service.rs  asset_category_service.rs  asset_loan_service.rs  asset_service.rs  audit_service.rs  auth_service.rs  bank_account_service.rs  campaign_service.rs  church_role_service.rs  church_service.rs  congregation_service.rs  ebd_attendance_service.rs  ebd_class_service.rs  ebd_lesson_service.rs  (+16 more)
backend/src/config/: mod.rs
backend/src/infrastructure/: cache.rs  cloudinary.rs  mod.rs
(+180 files in other folders)
