[package]
name = "igreja-manager-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Web framework
actix-web = "4.13"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-rt = "2"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "rust_decimal",
] }

# Auth
jsonwebtoken = "10.3"
argon2 = "0.5"

# Types
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Config
dotenvy = "0.15"

# Cache
redis = { version = "1.0", features = ["tokio-comp"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# API docs
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Misc
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
fake = { version = "4", features = ["derive"] }
